<resources>
    <string name="app_name">CombineImage</string>
    <string-array name="spinner_items">
        <item>KB</item>
        <item>MB</item>
    </string-array>
    <string name="printDimension">Dimension: %d X %d</string>
    <string name="printSize">Size: %s</string>
    <string name="Done">Done</string>
    <string name="None">None</string>
    <string name="Allow">ALLOW</string>
    <string name="LoadingText">Processing....</string>
    <string name="vertical_view_image">Vertical View Image</string>
    <string name="horizontal_view_image">Horizontal View Image</string>
    <string name="vertically">Vertically</string>
    <string name="horizontally">Horizontally</string>
    <string name="spacing">Spacing</string>
    <string name="border">Border</string>
    <string name="picimage">PicImage</string>
    <string name="save">Save</string>
    <string name="need_permissions">Need Permissions</string>
    <string name="permission_description_1">In order for you use certain features of this app, you need to give permission. See description for each permission</string>
    <string name="storage_permission_image_description">Storage/Image Access Image</string>
    <string name="storage_permission_name">Photo Library</string>
    <string name="storage_permission_description">Allow to access your photos</string>
    <string name="camera_permission_image_description">Camera Permission Image</string>
    <string name="camera_permission_name">Camera</string>
    <string name="camera_permission_description">Allow to access your camera</string>
    <string name="permission_description_2">Permission are necessary for all the features and functions to work properly.</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="reduce">Reduce</string>
    <string name="proceed">Proceed</string>
    <string name="browse">Browse</string>
    <string name="original">Original</string>
    <string name="compressed">Compressed</string>
    <string name="type_here">Type Here</string>
    <string name="original_image">Original Image</string>
    <string name="compressed_image">Compressed Image</string>
    <string name="title_activity_combine_image">CombineImageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="colors_code">
        <item>#ffebee</item>
        <item>#ffcdd2</item>
        <item>#ffcdd2</item>
        <item>#e57373</item>
        <item>#ef5350</item>
        <item>#f44336</item>
        <item>#e53935</item>
        <item>#d32f2f</item>
        <item>#c62828</item>
        <item>#b71c1c</item>
        <item>#ff8a80</item>
        <item>#ff5252</item>
        <item>#ff1744</item>
        <item>#d50000</item>
        <item>#fce4ec</item>
        <item>#f8bbd0</item>
        <item>#f48fb1</item>
        <item>#f06292</item>
        <item>#ec407a</item>
        <item>#e91e63</item>
        <item>#d81b60</item>
        <item>#c2185b</item>
        <item>#ad1457</item>
        <item>#880e4f</item>
        <item>#ff80ab</item>
        <item>#ff4081</item>
        <item>#f50057</item>
        <item>#c51162</item>
        <item>#f3e5f5</item>
        <item>#e1bee7</item>
        <item>#ce93d8</item>
        <item>#ba68c8</item>
        <item>#ab47bc</item>
        <item>#ab47bc</item>
        <item>#8e24aa</item>
        <item>#7b1fa2</item>
        <item>#6a1b9a</item>
        <item>#4a148c</item>
        <item>#ea80fc</item>
        <item>#e040fb</item>
        <item>#d500f9</item>
        <item>#aa00ff</item>
        <item>#ede7f6</item>
        <item>#d1c4e9</item>
        <item>#b39ddb</item>
        <item>#9575cd</item>
        <item>#7e57c2</item>
        <item>#673ab7</item>
        <item>#5e35b1</item>
        <item>#512da8</item>
        <item>#4527a0</item>
        <item>#311b92</item>
        <item>#b388ff</item>
        <item>#7c4dff</item>
        <item>#651fff</item>
        <item>#6200ea</item>
        <item>#e8eaf6</item>
        <item>#c5cae9</item>
        <item>#9fa8da</item>
        <item>#7986cb</item>
        <item>#5c6bc0</item>
        <item>#3f51b5</item>
        <item>#3949ab</item>
        <item>#303f9f</item>
        <item>#283593</item>
        <item>#1a237e</item>
        <item>#8c9eff</item>
        <item>#536dfe</item>
        <item>#3d5afe</item>
        <item>#304ffe</item>
        <item>#304ffe</item>
        <item>#304ffe</item>
        <item>#e3f2fd</item>
        <item>#bbdefb</item>
        <item>#90caf9</item>
        <item>#64b5f6</item>
        <item>#42a5f5</item>
        <item>#2196f3</item>
        <item>#1e88e5</item>
        <item>#1976d2</item>
        <item>#1565c0</item>
        <item>#0d47a1</item>
        <item>#82b1ff</item>
        <item>#448aff</item>
        <item>#2979ff</item>
        <item>#2962ff</item>
        <item>#e1f5fe</item>
        <item>#b3e5fc</item>
        <item>#81d4fa</item>
        <item>#4fc3f7</item>
        <item>#29b6f6</item>
        <item>#03a9f4</item>
        <item>#039be5</item>
        <item>#0288d1</item>
        <item>#0277bd</item>
        <item>#01579b</item>
        <item>#80d8ff</item>
        <item>#40c4ff</item>
        <item>#00b0ff</item>
        <item>#0091ea</item>
        <item>#e0f7fa</item>
        <item>#b2ebf2</item>
        <item>#80deea</item>
        <item>#4dd0e1</item>
        <item>#26c6da</item>
        <item>#00bcd4</item>
        <item>#00acc1</item>
        <item>#0097a7</item>
        <item>#00838f</item>
        <item>#006064</item>
        <item>#84ffff</item>
        <item>#18ffff</item>
        <item>#00e5ff</item>
        <item>#00b8d4</item>
        <item>#e0f2f1</item>
        <item>#b2dfdb</item>
        <item>#80cbc4</item>
        <item>#4db6ac</item>
        <item>#26a69a</item>
        <item>#009688</item>
        <item>#00897b</item>
        <item>#00796b</item>
        <item>#00695c</item>
        <item>#004d40</item>
        <item>#a7ffeb</item>
        <item>#64ffda</item>
        <item>#1de9b6</item>
        <item>#00bfa5</item>
        <item>#e8f5e9</item>
        <item>#c8e6c9</item>
        <item>#a5d6a7</item>
        <item>#81c784</item>
        <item>#66bb6a</item>
        <item>#4caf50</item>
        <item>#43a047</item>
        <item>#388e3c</item>
        <item>#2e7d32</item>
        <item>#1b5e20</item>
        <item>#b9f6ca</item>
        <item>#69f0ae</item>
        <item>#00e676</item>
        <item>#00c853</item>
        <item>#f1f8e9</item>
        <item>#dcedc8</item>
        <item>#c5e1a5</item>
        <item>#aed581</item>
        <item>#9ccc65</item>
        <item>#8bc34a</item>
        <item>#7cb342</item>
        <item>#689f38</item>
        <item>#558b2f</item>
        <item>#33691e</item>
        <item>#ccff90</item>
        <item>#b2ff59</item>
        <item>#76ff03</item>
        <item>#64dd17</item>
        <item>#f9fbe7</item>
        <item>#f0f4c3</item>
        <item>#e6ee9c</item>
        <item>#dce775</item>
        <item>#d4e157</item>
        <item>#cddc35</item>
        <item>#c0ca33</item>
        <item>#afb42b</item>
        <item>#9e9d24</item>
        <item>#827717</item>
        <item>#f4ff81</item>
        <item>#eeff41</item>
        <item>#c6ff00</item>
        <item>#aeea00</item>
        <item>#fffde7</item>
        <item>#fff9c4</item>
        <item>#fff59d</item>
        <item>#fff176</item>
        <item>#ffee58</item>
        <item>#ffeb3b</item>
        <item>#fdd835</item>
        <item>#fbc02d</item>
        <item>#f9a825</item>
        <item>#f57f17</item>
        <item>#ffff8d</item>
        <item>#ffff00</item>
        <item>#ffea00</item>
        <item>#ffd600</item>
        <item>#fff8e1</item>
        <item>#ffecb3</item>
        <item>#ffe082</item>
        <item>#ffd54f</item>
        <item>#ffca28</item>
        <item>#ffc107</item>
        <item>#ffb300</item>
        <item>#ffa000</item>
        <item>#ff8f00</item>
        <item>#ff6f00</item>
        <item>#ffe57f</item>
        <item>#ffd740</item>
        <item>#ffc400</item>
        <item>#ffab00</item>
        <item>#fff3e0</item>
        <item>#ffe0b2</item>
        <item>#ffe0b2</item>
        <item>#ffcc80</item>
        <item>#ffcc80</item>
        <item>#ffb74d</item>
        <item>#ffa726</item>
        <item>#ff9800</item>
        <item>#fb8c00</item>
        <item>#f57c00</item>
        <item>#ef6c00</item>
        <item>#e65100</item>
        <item>#ffd180</item>
        <item>#ffab40</item>
        <item>#ff9100</item>
        <item>#ff6d00</item>
        <item>#fbe9e7</item>
        <item>#ffccbc</item>
        <item>#ffab91</item>
        <item>#ff8a65</item>
        <item>#ff7043</item>
        <item>#ff5722</item>
        <item>#f4511e</item>
        <item>#e64a19</item>
        <item>#d84315</item>
        <item>#bf360c</item>
        <item>#ff9e80</item>
        <item>#ff6e46</item>
        <item>#ff3d00</item>
        <item>#dd2c00</item>
        <item>#efebe9</item>
        <item>#d7ccc8</item>
        <item>#bcaaa4</item>
        <item>#a1887f</item>
        <item>#8d6e63</item>
        <item>#795548</item>
        <item>#6d4c41</item>
        <item>#5d4037</item>
        <item>#4e342e</item>
        <item>#3e2723</item>
        <item>#fafafa</item>
        <item>#f5f5f5</item>
        <item>#eeeeee</item>
        <item>#e0e0e0</item>
        <item>#bdbdbd</item>
        <item>#9e9e9e</item>
        <item>#757575</item>
        <item>#616161</item>
        <item>#424242</item>
        <item>#212121</item>
        <item>#eceff1</item>
        <item>#cfd8dc</item>
        <item>#b0bec5</item>
        <item>#90a4ae</item>
        <item>#78909c</item>
        <item>#607d8b</item>
        <item>#546e7a</item>
        <item>#455a64</item>
        <item>#455a64</item>
        <item>#37474f</item>
        <item>#263238</item>
        <item>#000000</item>
        <item>#ffffff</item>
    </string-array>
</resources>