<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReduceActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnBrowseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBrowse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/ivOriginalLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBrowseLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original"
            app:layout_constraintBottom_toTopOf="@+id/ivOriginal"
            app:layout_constraintStart_toStartOf="@+id/ivOriginal"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivOriginal"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/ivCompressed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/original_image" />

        <TextView
            android:id="@+id/txtOWidthHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/ivOriginal"
            app:layout_constraintTop_toBottomOf="@+id/ivOriginal"
            tools:text="Dimension: " />

        <TextView
            android:id="@+id/txtOSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/txtOWidthHeight"
            app:layout_constraintTop_toBottomOf="@id/txtOWidthHeight"
            tools:layout_editor_absoluteY="48dp"
            tools:text="Size:" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compressed"
            app:layout_constraintStart_toStartOf="@+id/ivCompressed"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivCompressed"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivOriginal"
            app:layout_constraintTop_toTopOf="@+id/ivOriginal"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/compressed_image" />

        <TextView
            android:id="@+id/txtCWidthHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/printDimension"
            app:layout_constraintStart_toStartOf="@id/ivCompressed"
            app:layout_constraintTop_toBottomOf="@id/ivCompressed" />

        <TextView
            android:id="@+id/txtCSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printSize"
            app:layout_constraintStart_toStartOf="@id/txtCWidthHeight"
            app:layout_constraintTop_toBottomOf="@id/txtCWidthHeight" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sizeInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivOriginalLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/type_here"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/drdSizeMeasureLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/drdSizeMeasureLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnProcess"
            app:layout_constraintStart_toEndOf="@+id/inputTextLayout"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/drdSizeMeasure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:labelFor="@id/drdSizeMeasure"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/proceed"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/inputTextLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/drdSizeMeasureLayout"
            app:layout_constraintTop_toTopOf="@+id/inputTextLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />






</androidx.constraintlayout.widget.ConstraintLayout>